# Gen-AI-Application

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/endpoints/: embeddings.py  llm.py
app/core/: config.py  security.py
app/db/: base_class.py
app/db/models/: user.py
app/frontend/: streamlit_app.py
app/schemas/: llm.py  user.py
app/services/: embedding_service.py  llm_service.py
app/utils/: embedding_integration.py  llama_integration.py  nvidia_api_integration.py  openai_integration.py
